# Data-Warehouse

./: README.md  pyproject.toml
data_project/defs/: assets.py  resources.py
data_project/transform/: customers.py  datawarehouse_load.py  fact_orders.py  geolocation.py  order_items.py  order_payments.py  order_reviews.py  orders.py  postgre.py  products.py  sellers.py
